--- a/07-template/member2.html
+++ b/07-template/member2.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>프로필 카드 2</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-	<script src="https://kit.fontawesome.com/c47106c6a7.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/9ce0aa2d13.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
+	<script defer src="js/ie.js"></script>
 </head>
-<body>
-
+<body class="member2">
+	<section>
+		<nav class="menu">
+			<a href="#"><i class="fas fa-bars"></i></a>
+			<a href="#"><i class="far fa-sticky-note"></i></a>
+		</nav>
+		<article class="profile">
+			<img src="img/KakaoTalk_Image_2023-07-17-15-44-18.jpeg" alt="프로필 이미지">
+			<h1>황성하</h1>
+			<h2>Position - Data visualization</h2>
+			<a href="#" class="btnView">VIEW MORE</a>
+		</article>
+		<ul class="contact">
+			<li>
+				<i class="fa-brands fa-instagram"></i>
+				<span> </span>
+			</li>
+			<li>
+				<i class="fas far fa-envelope"></i>
+				<span> sjhsh2429@gmail.com </span>
+			</li>
+		</ul>
+		<nav class="others">
+			<a href="member1.html"></a>
+			<a href="member2.html" class="on"></a>
+			<a href="member3.html"></a>
+		</nav>
+	</section>
 </body>
 </html>
