--- a/07-template/member1.html
+++ b/07-template/member1.html
@@ -19,12 +19,12 @@
 			<img src="img/test1.jpg" alt="프로필 이미지">
 			<h1>하석규</h1>
 			<h2>Position - Backend</h2>
-			<a href="#" class="btnView">VIEW MORE</a>
+			<a href="https://github.com/HaSeokgyu" class="btnView">Git_hub</a>
 		</article>
 		<ul class="contact">
 			<li>
 				<i class="fa-brands fa-instagram"></i>
-				<span>hasoukgyu</span>
+				<a href="https://instagram.com/hasoukgyu?igshid=NTc4MTIwNjQ2YQ==">hasoukgyu</a>
 			</li>
 			<li>
 				<i class="fas far fa-envelope"></i>
